@@ -5,6 +5,7 @@
 	* Fixed issue #29241: NZ static currencies thousands decimal
 	* Fixed issue #28830: cn_short_local for Czech Republic misses an accent mark
 	* Added feature #32635: Update countries to level of ISO 3166-1:2006 - Newsletter VI-9 (2010-06-12)
+	* Added feature #32636: Update countries to level of ISO 3166-1:2006 - Newsletter VI-10 (2010-08-09)
 
 2011-01-25  Stanislas Rolland  <typo3@sjbr.ca>
 
